[package]
name = "image-converter-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_converter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
image = "0.25.8"
webp = "0.2.6"
dirs = "4.0.0"
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
